// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component should concat classname in props with Bulma classname 1`] = `
<table
  className="table other-class this-is-a-test"
>
  <p>
    Default
  </p>
</table>
`;

exports[`Table component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "bordered": false,
    "fullwidth": false,
    "hoverable": false,
    "narrow": false,
    "striped": false,
  },
  "render": [Function],
}
`;

exports[`Table component should have table classname 1`] = `
<table
  className="table"
>
  Test 
  <a
    href="test"
  >
    Give me
  </a>
</table>
`;

exports[`Table component should use inline styles 1`] = `
<table
  className="table"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</table>
`;
